--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,12 +19,32 @@
         <ol>
             <li>
                 <a href="/JavaWebTest/HelloNewServlet">HelloNewServlet{利用@來部屬Servlet}</a>
-                <a style ="cursor: help" onclick="javascript=alert('有空再做')">原始碼</a>
+                <a style ="cursor: help" onclick="javascript = alert('有空再做')">原始碼</a>
             </li>
             <li>
                 <a href="/JavaWebTest/forms/calcArea.html">計算面積 MVC範例</a>
             </li>
         </ol>
         <h2>20210611</h2>
+        <ol>
+            <li>
+                <a href="/JavaWebTest/forms/calcArea_Hw.html">0607HW 接收多組參數(多重複名稱 type=1&r=10&type=2&r=20&type=1&r=30)</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/forms/register.html">考試註冊</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/forms/bmiForm.html">BMI 觀察表單編碼</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/forms/bmi.html">0611HW 計算bmi</a>
+            </li>
+        </ol>
+        <h2>20210618</h2>
+        <ol>
+            <li>
+                <a href="/JavaWebTest/forms/upload.html">multipart/form-data</a>
+            </li>
+        </ol>
     </body>
 </html>
