--- a/src/main/webapp/forms/calcArea_Hw.html
+++ b/src/main/webapp/forms/calcArea_Hw.html
@@ -14,7 +14,7 @@
     <!--上下左右留白20px-->
     <body style="padding: 20px">
         <!--表單送到這裡 action="/JavaWebTest/controller/CalcArea" 不一定要跟Servler名稱一樣而是按照urlPatterns-->
-        <form class="pure-form" method="post" action="/JavaWebTest/controller/CalcArea">
+        <form class="pure-form" method="post" action="/JavaWebTest/controller/CalcArea_Hw">
             <fieldset>
                 <legend>計算面積</legend>
                 <!--第一組-->
@@ -24,7 +24,23 @@
                 </select>
                 <!--標準html type是沒有number-->
                 <input type="number" placeholder="請輸入半徑" name="r"/>
-
+                <p/>
+                <!--第二組-->
+                <select name="type">
+                    <option value="1" selected>圓面積</option><!--selected預設-->
+                    <option value="2">球體積</option>
+                </select>
+                <!--標準html type是沒有number-->
+                <input type="number" placeholder="請輸入半徑" name="r"/>
+                <p/>
+                <!--第三組-->
+                <select name="type">
+                    <option value="1" selected>圓面積</option><!--selected預設-->
+                    <option value="2">球體積</option>
+                </select>
+                <!--標準html type是沒有number-->
+                <input type="number" placeholder="請輸入半徑" name="r"/>
+                <p/>
                 <button type="submit" class="pure-button pure-button-primary">計算</button>
             </fieldset>
         </form>
