--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,5 +88,35 @@
                 <a href="/JavaWebTest/forms/bmi_session.jsp">BMI (Session版)</a>
             </li>
         </ol>
+        <h2>20210705</h2>
+        <ol>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag.jsp">使用自定標籤</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag2.jsp">自定標籤Hello Tag</a>
+            </li>
+        </ol>
+        <h2>20210709</h2>
+        <ol>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag3.jsp">自定標籤Welcome Tag</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag4.jsp">自定標籤BMI Tag</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag5.jsp">自定標籤Exchange Tag</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag6.jsp">自定標籤Loop Tag</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag7.jsp">自定標籤Lotto Tag</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag8.jsp">自定標籤Search Tag</a>
+            </li>
+        </ol>
     </body>
 </html>
