--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,7 +88,7 @@
                 <a href="/JavaWebTest/forms/bmi_session.jsp">BMI (Session版)</a>
             </li>
         </ol>
-        <h2>20210705</h2>
+        <h2>20210705 自定標籤</h2>
         <ol>
             <li> 
                 <a href="/JavaWebTest/mytags/usetag.jsp">使用自定標籤</a>
@@ -116,6 +116,46 @@
             </li>
             <li> 
                 <a href="/JavaWebTest/mytags/usetag8.jsp">自定標籤Search Tag</a>
+            </li>
+
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag9.jsp">自定標籤report Tag Hw</a>
+            </li>
+
+        </ol>
+        <h2>20210712 自定標籤</h2>
+        <ol>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag10.jsp">自定標籤circleArea Tag SimpleTagSupport支援空標籤</a>
+            </li>
+            
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag11.jsp">自定標籤Add Tag SimpleTagSupport 動態屬性DynamicAttributes</a>
+            </li>
+            
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag12.jsp">自定標籤piechart.tag TagFile</a>
+            </li>
+            <li> 
+                <a href="/JavaWebTest/mytags/usetag_watchlist.jsp">自定標籤watchlist.tag TagFile</a>
+            </li>
+        </ol>
+        <h2>20210716 REST</h2>
+        <ol>
+            <li>
+                <a href="/JavaWebTest/rest/hello/yun">/rest/hello/yun</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/rest/hello/1">/rest/hello/1</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/rest/hello/2?score=100">/rest/hello/2?score=100</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/rest/bmi/170/60">/rest/bmi/170/60</a>
+            </li>
+            <li>
+                <a href="/JavaWebTest/rest/bmi/?h=170&w=60">/rest/bmi/?h=170&w=60</a>
             </li>
         </ol>
     </body>
